--- a/comboSave.html
+++ b/comboSave.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/comboSave.css">
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/loading.css">
-    <link rel="stylesheet" href="/css/keyframes.css">
-    <link rel="stylesheet" href="/css/modal.css">
-    <link rel="stylesheet" href="/css/input.css">
-    <link rel="stylesheet" href="/css/baseResponsive.css">
+    <link rel="stylesheet" href="./css/comboSave.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/loading.css">
+    <link rel="stylesheet" href="./css/keyframes.css">
+    <link rel="stylesheet" href="./css/modal.css">
+    <link rel="stylesheet" href="./css/input.css">
+    <link rel="stylesheet" href="./css/baseResponsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Combo tiết kiệm</title>
@@ -31,7 +31,7 @@
     <header id="header">
         <div class="head__left-resposive">
             <div class="image">
-                <img src="/img/logoWeb.png" width="150px">
+                <img src="./img/logoWeb.png" width="150px">
             </div>
             <div class="title">Dẫn đầu chất lượng</div>
         </div>
@@ -49,17 +49,17 @@
             </div> -->
                 <div></div>
                 <ul class="flex">
-                    <li><img src="/img/flag_vn.png" alt="icon" width="50px"></li>
+                    <li><img src="./img/flag_vn.png" alt="icon" width="50px"></li>
                     <li>VI</li>
                     <li><i class="fa-solid fa-chevron-down"></i></li> 
                     <li>
                         <ul class="languages">
                             <li>
-                                <img src="/img/flag_vn.png" alt="" width="50px">
+                                <img src="./img/flag_vn.png" alt="" width="50px">
                                 <p>VI</p>
                             </li>
                             <li>
-                                <img src="/img/flag_anh.webp" alt="" width="38px">
+                                <img src="./img/flag_anh.webp" alt="" width="38px">
                                 <p>EN</p>
                             </li>
                         </ul> 
@@ -74,7 +74,7 @@
 
            <div class="head_center">
                 <div class="logo">
-                    <img src="/img/logoWeb.png" alt="" width="150px">
+                    <img src="./img/logoWeb.png" alt="" width="150px">
                 </div>
            </div>
 
@@ -90,17 +90,17 @@
         </div>
         <nav>
             <ul class="menu flex">
-                <li><a href="/html/index.html"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
-                <li><a href="/html/schedule.html">Lịch Trình</a></li>
-                <li><a href="/html/checkTicket.html">Dịch vụ vé</a></li>
-                <li><a href="/html/news.html">Tin tức</a></li>          
-                <li><a href="/html/AboutUs.html">Về chúng tôi</a></li>
-                <li><a href="/html/contact.html">Liên hệ</a></li>
+                <li><a href="./index.html"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
+                <li><a href="./schedule.html">Lịch Trình</a></li>
+                <li><a href="./checkTicket.html">Dịch vụ vé</a></li>
+                <li><a href="./news.html">Tin tức</a></li>          
+                <li><a href="./AboutUs.html">Về chúng tôi</a></li>
+                <li><a href="./contact.html">Liên hệ</a></li>
                 <li>
                     <a href="#"  style="color: var(--white-color);">Khác <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
-                       <li><a href="/html/comboSave.html">Combo tiết kiệm</a></li>
-                       <li><a href="/html/insurance.html">Bảo hiểm du lịch</a></li>
+                       <li><a href="./comboSave.html">Combo tiết kiệm</a></li>
+                       <li><a href="./insurance.html">Bảo hiểm du lịch</a></li>
                        
                     </ul>
                 </li>
@@ -110,10 +110,10 @@
         <aside>
             <div class="img_aside">
                 <div class="form_img">
-                    <img src="/img/web.png" class="img_offical" alt="">
+                    <img src="./img/web.png" class="img_offical" alt="">
                     <div class="image">
-                        <img src="/img/muontain_offical.png" alt="">
-                        <img src="/img/bus_khong_nen.png" >
+                        <img src="./img/muontain_offical.png" alt="">
+                        <img src="./img/bus_khong_nen.png" >
                     </div>  
                                 
                 </div>                 
@@ -131,7 +131,7 @@
                 <div class="combo__save-item-parent wow animate__fadeInUp">
                     <div class="combo__save-item">
                         <div class="image">
-                            <img src="/img/combosave/HaLong.jpg" alt="">
+                            <img src="./img/combosave/HaLong.jpg" alt="">
                         </div>
                         <div class="content">
                             <div class="address-star">
@@ -168,7 +168,7 @@
                 <div class="combo__save-item-parent wow animate__fadeInUp">
                     <div class="combo__save-item">
                         <div class="image">
-                            <img src="/img/combosave/HaLong.jpg" alt="">
+                            <img src="./img/combosave/HaLong.jpg" alt="">
                         </div>
                         <div class="content">
                             <div class="address-star">
@@ -205,7 +205,7 @@
                 <div class="combo__save-item-parent wow animate__fadeInUp">
                     <div class="combo__save-item">
                         <div class="image">
-                            <img src="/img/combosave/HaLong.jpg" alt="">
+                            <img src="./img/combosave/HaLong.jpg" alt="">
                         </div>
                         <div class="content">
                             <div class="address-star">
@@ -242,7 +242,7 @@
                 <div class="combo__save-item-parent wow animate__fadeInUp">
                     <div class="combo__save-item">
                         <div class="image">
-                            <img src="/img/combosave/HaLong.jpg" alt="">
+                            <img src="./img/combosave/HaLong.jpg" alt="">
                         </div>
                         <div class="content">
                             <div class="address-star">
@@ -279,7 +279,7 @@
                 <div class="combo__save-item-parent wow animate__fadeInUp">
                     <div class="combo__save-item">
                         <div class="image">
-                            <img src="/img/combosave/HaLong.jpg" alt="">
+                            <img src="./img/combosave/HaLong.jpg" alt="">
                         </div>
                         <div class="content">
                             <div class="address-star">
@@ -316,7 +316,7 @@
                 <div class="combo__save-item-parent wow animate__fadeInUp">
                     <div class="combo__save-item">
                         <div class="image">
-                            <img src="/img/combosave/HaLong.jpg" alt="">
+                            <img src="./img/combosave/HaLong.jpg" alt="">
                         </div>
                         <div class="content">
                             <div class="address-star">
@@ -353,7 +353,7 @@
                 <div class="combo__save-item-parent wow animate__fadeInUp">
                     <div class="combo__save-item">
                         <div class="image">
-                            <img src="/img/combosave/HaLong.jpg" alt="">
+                            <img src="./img/combosave/HaLong.jpg" alt="">
                         </div>
                         <div class="content">
                             <div class="address-star">
@@ -390,7 +390,7 @@
                 <div class="combo__save-item-parent wow animate__fadeInUp">
                     <div class="combo__save-item">
                         <div class="image">
-                            <img src="/img/combosave/HaLong.jpg" alt="">
+                            <img src="./img/combosave/HaLong.jpg" alt="">
                         </div>
                         <div class="content">
                             <div class="address-star">
@@ -427,7 +427,7 @@
                 <div class="combo__save-item-parent wow animate__fadeInUp">
                     <div class="combo__save-item">
                         <div class="image">
-                            <img src="/img/combosave/HaLong.jpg" alt="">
+                            <img src="./img/combosave/HaLong.jpg" alt="">
                         </div>
                         <div class="content">
                             <div class="address-star">
@@ -468,7 +468,7 @@
         <div class="footer-list ">
              <div class="footer-img">
                 <div class="title">Chúng tôi mong muốn được đồng hành cùng bạn</div>
-                <img src="/img/footer.png" alt="" width="100%">
+                <img src="./img/footer.png" alt="" width="100%">
             </div>
 
             <div class="footer-contact">
@@ -476,7 +476,7 @@
                     <div class="title">Tải app</div>
                     <div class="app_list">
                         <div class="Ch-play flex">
-                            <p><a href = ""><img src="/img/ch_play.webp" alt="" width="30px"></a></p>
+                            <p><a href = ""><img src="./img/ch_play.webp" alt="" width="30px"></a></p>
                             <p><a href = "">CH Play</a></p>
                         </div>
                         <div class="app-store">
@@ -654,14 +654,14 @@
                         </div>
                         <div class="form-google form__base-more">
                             <div class="icon">
-                                <img src="/img/icon/google.png" alt="Google" width="20px">
+                                <img src="./img/icon/google.png" alt="Google" width="20px">
                             </div>
                             <div class="form-lable">Đăng ký bằng Google</div>
                         </div>
 
                         <div class="form-google form__base-more">
                             <div class="icon">
-                                <img src="/img/icon/facebook.png" alt="Google" width="20px">
+                                <img src="./img/icon/facebook.png" alt="Google" width="20px">
                             </div>
                             <div class="form-lable">Đăng ký bằng Facebook</div>
                         </div> 
@@ -700,17 +700,17 @@
                         </div> -->
                         <div></div>
                         <ul class="flex">
-                            <li><img src="/img/flag_vn.png" alt="icon" width="50px"></li>
+                            <li><img src="./img/flag_vn.png" alt="icon" width="50px"></li>
                             <li>VI</li>
                             <li><i class="fa-solid fa-chevron-down"></i></li> 
                             <li>
                                 <ul class="languages">
                                     <li>
-                                        <img src="/img/flag_vn.png" alt="" width="50px">
+                                        <img src="./img/flag_vn.png" alt="" width="50px">
                                         <p>VI</p>
                                     </li>
                                     <li>
-                                        <img src="/img/flag_anh.webp" alt="" width="38px">
+                                        <img src="./img/flag_anh.webp" alt="" width="38px">
                                         <p>EN</p>
                                     </li>
                                 </ul> 
@@ -731,14 +731,14 @@
 
                 <nav>
                     <ul class="menu">
-                        <li><a href="/html/index.html" id="home"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
-                        <li><a href="/html/schedule.html">Lịch Trình</a></li>
-                        <li><a href="/html/checkTicket.html" id="checkTicket">Dịch vụ vé</a></li>
-                        <li><a href="/html/news.html" id="news">Tin tức</a></li>          
-                        <li><a href="/html/AboutUs.html" id="about_us">Về chúng tôi</a></li>
-                        <li><a href="/html/contact.html" id="contact">Liên hệ</a></li>
-                        <li><a href="/html/comboSave.html">Combo tiết kiệm</a></li>
-                        <li><a href="/html/insurance.html">Bảo hiểm du lịch</a></li>          
+                        <li><a href="./index.html" id="home"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
+                        <li><a href="./schedule.html">Lịch Trình</a></li>
+                        <li><a href="./checkTicket.html" id="checkTicket">Dịch vụ vé</a></li>
+                        <li><a href="./news.html" id="news">Tin tức</a></li>          
+                        <li><a href="./AboutUs.html" id="about_us">Về chúng tôi</a></li>
+                        <li><a href="./contact.html" id="contact">Liên hệ</a></li>
+                        <li><a href="./comboSave.html">Combo tiết kiệm</a></li>
+                        <li><a href="./insurance.html">Bảo hiểm du lịch</a></li>          
                     </ul>
                 </nav>
 
@@ -760,7 +760,7 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/model.js"></script>
+    <script src="./js/model.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script> 
     <script>
      document.addEventListener('DOMContentLoaded', function () {
