--- a/insurance.html
+++ b/insurance.html
@@ -31,7 +31,7 @@
     <header id="header">
         <div class="head__left-resposive">
             <div class="image">
-                <img src="./img/logoWeb.png" width="150px">
+                <img src="./img/headerandfooter/logoWeb.png" width="150px">
             </div>
             <div class="title">Dẫn đầu chất lượng</div>
         </div>
@@ -49,17 +49,17 @@
             </div> -->
                 <div></div>
                 <ul class="flex">
-                    <li><img src="./img/flag_vn.png" alt="icon" width="50px"></li>
+                    <li><img src="./img/headerandfooter/flag_vn.png" alt="icon" width="50px"></li>
                     <li>VI</li>
                     <li><i class="fa-solid fa-chevron-down"></i></li> 
                     <li>
                         <ul class="languages">
                             <li>
-                                <img src="./img/flag_vn.png" alt="" width="50px">
+                                <img src="./img/headerandfooter/flag_vn.png" alt="" width="50px">
                                 <p>VI</p>
                             </li>
                             <li>
-                                <img src="./img/flag_anh.webp" alt="" width="38px">
+                                <img src="./img/headerandfooter/flag_anh.webp" alt="" width="38px">
                                 <p>EN</p>
                             </li>
                         </ul> 
@@ -74,7 +74,7 @@
 
            <div class="head_center">
                 <div class="logo">
-                    <img src="./img/logoWeb.png" alt="" width="150px">
+                    <img src="./img/headerandfooter/logoWeb.png" alt="" width="150px">
                 </div>
            </div>
 
@@ -83,7 +83,7 @@
                 <li><a href="#">Đăng nhập</a></li>
                 <li><a href="#">Đăng ký</a></li>
            </ul>
- 
+
            <div class="navbar">
             <i class="fa-solid fa-bars"></i>
            </div>
@@ -91,13 +91,13 @@
         <nav>
             <ul class="menu flex">
                 <li><a href="./index.html"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
-                <li><a href="./schedule.html">Lịch Trình</a></li>
+                <li><a href="./schedule.html" >Lịch Trình</a></li>
                 <li><a href="./checkTicket.html">Dịch vụ vé</a></li>
                 <li><a href="./news.html">Tin tức</a></li>          
                 <li><a href="./AboutUs.html">Về chúng tôi</a></li>
                 <li><a href="./contact.html">Liên hệ</a></li>
                 <li>
-                    <a href="#" style="color: var(--white-color);">Khác <i class="fa-solid fa-caret-down" ></i></a>
+                    <a href="#" style="color: var(--white-color);">Khác <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
                        <li><a href="./comboSave.html">Combo tiết kiệm</a></li>
                        <li><a href="./insurance.html">Bảo hiểm du lịch</a></li>
@@ -283,7 +283,7 @@
         <div class="footer-list ">
              <div class="footer-img">
                 <div class="title">Chúng tôi mong muốn được đồng hành cùng bạn</div>
-                <img src="./img/footer.png" alt="" width="100%">
+                <img src="./img/headerandfooter/footer.png" alt="" width="100%">
             </div>
 
             <div class="footer-contact">
@@ -291,7 +291,7 @@
                     <div class="title">Tải app</div>
                     <div class="app_list">
                         <div class="Ch-play flex">
-                            <p><a href = ""><img src="./img/ch_play.webp" alt="" width="30px"></a></p>
+                            <p><a href = ""><img src="./img/headerandfooter/ch_play.webp" alt="" width="30px"></a></p>
                             <p><a href = "">CH Play</a></p>
                         </div>
                         <div class="app-store">
@@ -469,14 +469,14 @@
                         </div>
                         <div class="form-google form__base-more">
                             <div class="icon">
-                                <img src="./img/icon/google.png" alt="Google" width="20px">
+                                <img src="./img/headerandfooter/google.png" alt="Google" width="20px">
                             </div>
                             <div class="form-lable">Đăng ký bằng Google</div>
                         </div>
     
                         <div class="form-google form__base-more">
                             <div class="icon">
-                                <img src="./img/icon/facebook.png" alt="Google" width="20px">
+                                <img src="./img/headerandfooter/facebook.png" alt="Google" width="20px">
                             </div>
                             <div class="form-lable">Đăng ký bằng Facebook</div>
                         </div> 
@@ -496,8 +496,8 @@
             </div>
         </div>
     </div>
-    <!-- Model Menu -->
-    <div class="model_menu">
+      <!-- Model Menu -->
+      <div class="model_menu">
         <div class="model_overplay"></div>
         <div class="model__menu-body">
             <header id="header" class="mobile">
@@ -514,17 +514,17 @@
                         </div> -->
                         <div></div>
                         <ul class="flex">
-                            <li><img src="./img/flag_vn.png" alt="icon" width="50px"></li>
+                            <li><img src="./img/headerandfooter/flag_vn.png" alt="icon" width="50px"></li>
                             <li>VI</li>
                             <li><i class="fa-solid fa-chevron-down"></i></li> 
                             <li>
                                 <ul class="languages">
                                     <li>
-                                        <img src="./img/flag_vn.png" alt="" width="50px">
+                                        <img src="./img/headerandfooter/flag_vn.png" alt="" width="50px">
                                         <p>VI</p>
                                     </li>
                                     <li>
-                                        <img src="./img/flag_anh.webp" alt="" width="38px">
+                                        <img src="./img/headerandfooter/flag_anh.webp" alt="" width="38px">
                                         <p>EN</p>
                                     </li>
                                 </ul> 
@@ -545,14 +545,14 @@
 
                 <nav>
                     <ul class="menu">
-                        <li><a href="./index.html" id="home"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
+                        <li><a href="./index.html" ><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
                         <li><a href="./schedule.html">Lịch Trình</a></li>
-                        <li><a href="./checkTicket.html" id="checkTicket">Dịch vụ vé</a></li>
-                        <li><a href="./news.html" id="news">Tin tức</a></li>          
-                        <li><a href="./AboutUs.html" id="about_us">Về chúng tôi</a></li>
-                        <li><a href="./contact.html" id="contact">Liên hệ</a></li>
+                        <li><a href="./checkTicket.html" >Dịch vụ vé</a></li>
+                        <li><a href="./news.html" >Tin tức</a></li>          
+                        <li><a href="./AboutUs.html">Về chúng tôi</a></li>
+                        <li><a href="./contact.html">Liên hệ</a></li>
                         <li><a href="./comboSave.html">Combo tiết kiệm</a></li>
-                        <li><a href="./insurance.html">Bảo hiểm du lịch</a></li>          
+                        <li><a href="./insurance.html"style="color:var(--white-color);">Bảo hiểm du lịch</a></li>          
                     </ul>
                 </nav>
 
@@ -566,7 +566,6 @@
             <div class="image"></div>
         </div>
     </div>
-
 <!-- Nút di chuyển lên -->
     <div class="moveUp-btn">
         <div class="button-moveup">
