--- a/AboutUs.html
+++ b/AboutUs.html
@@ -31,7 +31,7 @@
     <header id="header">
         <div class="head__left-resposive">
             <div class="image">
-                <img src="./img/logoWeb.png" width="150px">
+                <img src="./img/headerandfooter/logoWeb.png" width="150px">
             </div>
             <div class="title">Dẫn đầu chất lượng</div>
         </div>
@@ -49,17 +49,17 @@
             </div> -->
                 <div></div>
                 <ul class="flex">
-                    <li><img src="./img/flag_vn.png" alt="icon" width="50px"></li>
+                    <li><img src="./img/headerandfooter/flag_vn.png" alt="icon" width="50px"></li>
                     <li>VI</li>
                     <li><i class="fa-solid fa-chevron-down"></i></li> 
                     <li>
                         <ul class="languages">
                             <li>
-                                <img src="./img/flag_vn.png" alt="" width="50px">
+                                <img src="./img/headerandfooter/flag_vn.png" alt="" width="50px">
                                 <p>VI</p>
                             </li>
                             <li>
-                                <img src="./img/flag_anh.webp" alt="" width="38px">
+                                <img src="./img/headerandfooter/flag_anh.webp" alt="" width="38px">
                                 <p>EN</p>
                             </li>
                         </ul> 
@@ -74,7 +74,7 @@
 
            <div class="head_center">
                 <div class="logo">
-                    <img src="./img/logoWeb.png" alt="" width="150px">
+                    <img src="./img/headerandfooter/logoWeb.png" alt="" width="150px">
                 </div>
            </div>
 
@@ -91,10 +91,10 @@
         <nav>
             <ul class="menu flex">
                 <li><a href="./index.html"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
-                <li><a href="./schedule.html">Lịch Trình</a></li>
+                <li><a href="./schedule.html" >Lịch Trình</a></li>
                 <li><a href="./checkTicket.html">Dịch vụ vé</a></li>
                 <li><a href="./news.html">Tin tức</a></li>          
-                <li><a href="./AboutUs.html" style="color: var(--white-color);">Về chúng tôi</a></li>
+                <li><a href="./AboutUs.html"  style="color: var(--white-color);">Về chúng tôi</a></li>
                 <li><a href="./contact.html">Liên hệ</a></li>
                 <li>
                     <a href="#">Khác <i class="fa-solid fa-caret-down"></i></a>
@@ -105,7 +105,7 @@
                     </ul>
                 </li>
             </ul>
-        </nav> 
+        </nav>
 
         <aside>
             <div class="img_aside">
@@ -130,17 +130,15 @@
                     <div class="content_web wow animate__pulse">
                         <h1>OURBUS</h1>
                         <h2>"Chất lượng là danh dự"</h2>
-                        <p>Tập đoàn Phương Trang – FUTA Group được thành lập năm 2001. Với hoạt động kinh doanh chính trong
-                            lĩnh vực mua bán xe ô tô, vận tải hành khách, bất động sản và kinh doanh dịch vụ. Phương Trang
-                            dần trở thành cái tên quen thuộc đồng hành cùng người Việt trên mọi lĩnh vực.
+                        <p>Ourbus được thành lập vào năm 2001, chuyên về kinh doanh ô tô, vận tải hành khách, bất động sản
+                            và dịch vụ. Trong những năm qua, Ourbus đã trở thành cái tên đáng tin cậy của nhiều người Việt Nam ở nhiều lĩnh vực khác nhau.
                         </p>
-                        <p>Trải qua hơn 20 năm hình thành và phát triển đặt khách hàng là trọng tâm, chúng tôi tự hào trở thành
-                            doanh nghiệp vận tải nòng cốt đóng góp tích cực vào sự phát triển chung của ngành vận tải nói riêng
-                            và nền kinh tế đất nước nói chung. Luôn cải tiến mang đến chất lượng dịch vụ tối ưu nhất dành cho 
-                            khách hàng, Công ty Phương Trang được ghi nhận qua nhiều giải thưởng danh giá như “Thương hiệu số 1
-                            Việt Nam, “Top 10 Thương hiệu nổi tiếng Việt Nam”, “Top 10 Dịch vụ hoàn hảo vì quyền lợi người 
-                            tiêu dùng năm 2022”, “Top 10 Doanh nghiệp tiêu biểu Việt Nam”, “Top 10 thương hiệu, sản phẩm dịch
-                            vụ uy tín Việt Nam – ASEAN 2022” …
+                        <p>Với hơn 20 năm kinh nghiệm và phương châm lấy khách hàng làm trọng tâm, chúng tôi tự hào là đơn vị chủ chốt
+                            trong ngành vận tải, đóng góp đáng kể vào sự phát triển của nền kinh tế. Không ngừng cải tiến để cung cấp
+                            chất lượng dịch vụ tốt nhất có thể cho khách hàng, Ourbus đã được công nhận bằng nhiều giải thưởng danh
+                            giá, bao gồm "Thương hiệu số 1 Việt Nam", "Top 10 Thương hiệu nổi tiếng Việt Nam", "Top 10 Dịch vụ hoàn hảo
+                            vì quyền lợi người tiêu dùng 2022", "Top 10 Doanh nghiệp tiêu biểu Việt Nam" và "Top 10 Thương hiệu, dịch
+                            vụ uy tín Việt Nam - ASEAN 2022".
                         </p>
                     </div>
     <!-- Tầm nhìn và sứ mệnh -->
@@ -308,7 +306,7 @@
         <div class="footer-list ">
              <div class="footer-img">
                 <div class="title">Chúng tôi mong muốn được đồng hành cùng bạn</div>
-                <img src="./img/footer.png" alt="" width="100%">
+                <img src="./img/headerandfooter/footer.png" alt="" width="100%">
             </div>
 
             <div class="footer-contact">
@@ -316,7 +314,7 @@
                     <div class="title">Tải app</div>
                     <div class="app_list">
                         <div class="Ch-play flex">
-                            <p><a href = ""><img src="./img/ch_play.webp" alt="" width="30px"></a></p>
+                            <p><a href = ""><img src="./img/headerandfooter/ch_play.webp" alt="" width="30px"></a></p>
                             <p><a href = "">CH Play</a></p>
                         </div>
                         <div class="app-store">
@@ -494,14 +492,14 @@
                         </div>
                         <div class="form-google form__base-more">
                             <div class="icon">
-                                <img src="./img/icon/google.png" alt="Google" width="20px">
+                                <img src="./img/headerandfooter/google.png" alt="Google" width="20px">
                             </div>
                             <div class="form-lable">Đăng ký bằng Google</div>
                         </div>
     
                         <div class="form-google form__base-more">
                             <div class="icon">
-                                <img src="./img/icon/facebook.png" alt="Google" width="20px">
+                                <img src="./img/headerandfooter/facebook.png" alt="Google" width="20px">
                             </div>
                             <div class="form-lable">Đăng ký bằng Facebook</div>
                         </div> 
@@ -521,8 +519,8 @@
             </div>
         </div>
     </div>
-    <!-- Model Menu -->
-    <div class="model_menu">
+     <!-- Model Menu -->
+     <div class="model_menu">
         <div class="model_overplay"></div>
         <div class="model__menu-body">
             <header id="header" class="mobile">
@@ -539,17 +537,17 @@
                         </div> -->
                         <div></div>
                         <ul class="flex">
-                            <li><img src="./img/flag_vn.png" alt="icon" width="50px"></li>
+                            <li><img src="./img/headerandfooter/flag_vn.png" alt="icon" width="50px"></li>
                             <li>VI</li>
                             <li><i class="fa-solid fa-chevron-down"></i></li> 
                             <li>
                                 <ul class="languages">
                                     <li>
-                                        <img src="./img/flag_vn.png" alt="" width="50px">
+                                        <img src="./img/headerandfooter/flag_vn.png" alt="" width="50px">
                                         <p>VI</p>
                                     </li>
                                     <li>
-                                        <img src="./img/flag_anh.webp" alt="" width="38px">
+                                        <img src="./img/headerandfooter/flag_anh.webp" alt="" width="38px">
                                         <p>EN</p>
                                     </li>
                                 </ul> 
@@ -570,12 +568,12 @@
 
                 <nav>
                     <ul class="menu">
-                        <li><a href="./index.html" id="home"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
+                        <li><a href="./index.html" ><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
                         <li><a href="./schedule.html">Lịch Trình</a></li>
-                        <li><a href="./checkTicket.html" id="checkTicket">Dịch vụ vé</a></li>
-                        <li><a href="./news.html" id="news">Tin tức</a></li>          
-                        <li><a href="./AboutUs.html" id="about_us">Về chúng tôi</a></li>
-                        <li><a href="./contact.html" id="contact">Liên hệ</a></li>
+                        <li><a href="./checkTicket.html" >Dịch vụ vé</a></li>
+                        <li><a href="./news.html" >Tin tức</a></li>          
+                        <li><a href="./AboutUs.html"style="color:var(--white-color);" >Về chúng tôi</a></li>
+                        <li><a href="./contact.html" >Liên hệ</a></li>
                         <li><a href="./comboSave.html">Combo tiết kiệm</a></li>
                         <li><a href="./insurance.html">Bảo hiểm du lịch</a></li>          
                     </ul>
