--- a/checkTicket.html
+++ b/checkTicket.html
@@ -30,9 +30,9 @@
     </div>
 
     <header id="header">
-        <div class="head__left-resposive"> 
+        <div class="head__left-resposive">
             <div class="image">
-                <img src="./img/logoWeb.png" width="150px">
+                <img src="./img/headerandfooter/logoWeb.png" width="150px">
             </div>
             <div class="title">Dẫn đầu chất lượng</div>
         </div>
@@ -48,19 +48,19 @@
                     <div class="cicle-item"></div>
                 </div>
             </div> -->
-
+                <div></div>
                 <ul class="flex">
-                    <li><img src="./img/flag_vn.png" alt="icon" width="50px"></li>
+                    <li><img src="./img/headerandfooter/flag_vn.png" alt="icon" width="50px"></li>
                     <li>VI</li>
                     <li><i class="fa-solid fa-chevron-down"></i></li> 
                     <li>
                         <ul class="languages">
                             <li>
-                                <img src="./img/flag_vn.png" alt="" width="50px">
+                                <img src="./img/headerandfooter/flag_vn.png" alt="" width="50px">
                                 <p>VI</p>
                             </li>
                             <li>
-                                <img src="./img/flag_anh.webp" alt="" width="38px">
+                                <img src="./img/headerandfooter/flag_anh.webp" alt="" width="38px">
                                 <p>EN</p>
                             </li>
                         </ul> 
@@ -75,7 +75,7 @@
 
            <div class="head_center">
                 <div class="logo">
-                    <img src="./img/logoWeb.png" alt="" width="150px">
+                    <img src="./img/headerandfooter/logoWeb.png" alt="" width="150px">
                 </div>
            </div>
 
@@ -93,7 +93,7 @@
             <ul class="menu flex">
                 <li><a href="./index.html"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
                 <li><a href="./schedule.html">Lịch Trình</a></li>
-                <li><a href="./checkTicket.html"  style="color: var(--white-color);">Dịch vụ vé</a></li>
+                <li><a href="./checkTicket.html" style="color: var(--white-color);">Dịch vụ vé</a></li>
                 <li><a href="./news.html">Tin tức</a></li>          
                 <li><a href="./AboutUs.html">Về chúng tôi</a></li>
                 <li><a href="./contact.html">Liên hệ</a></li>
@@ -148,7 +148,7 @@
         <div class="footer-list ">
              <div class="footer-img">
                 <div class="title">Chúng tôi mong muốn được đồng hành cùng bạn</div>
-                <img src="./img/footer.png" alt="" width="100%">
+                <img src="./img/headerandfooter/footer.png" alt="" width="100%">
             </div>
 
             <div class="footer-contact">
@@ -156,7 +156,7 @@
                     <div class="title">Tải app</div>
                     <div class="app_list">
                         <div class="Ch-play flex">
-                            <p><a href = ""><img src="./img/ch_play.webp" alt="" width="30px"></a></p>
+                            <p><a href = ""><img src="./img/headerandfooter/ch_play.webp" alt="" width="30px"></a></p>
                             <p><a href = "">CH Play</a></p>
                         </div>
                         <div class="app-store">
@@ -334,14 +334,14 @@
                         </div>
                         <div class="form-google form__base-more">
                             <div class="icon">
-                                <img src="./img/icon/google.png" alt="Google" width="20px">
+                                <img src="./img/headerandfooter/google.png" alt="Google" width="20px">
                             </div>
                             <div class="form-lable">Đăng ký bằng Google</div>
                         </div>
 
                         <div class="form-google form__base-more">
                             <div class="icon">
-                                <img src="./img/icon/facebook.png" alt="Google" width="20px">
+                                <img src="./img/headerandfooter/facebook.png" alt="Google" width="20px">
                             </div>
                             <div class="form-lable">Đăng ký bằng Facebook</div>
                         </div> 
@@ -362,13 +362,13 @@
         </div>
     </div>
 
-    <!-- Model Menu -->
-    <div class="model_menu">
+      <!-- Model Menu -->
+      <div class="model_menu">
         <div class="model_overplay"></div>
         <div class="model__menu-body">
             <header id="header" class="mobile">
                 <div class="head flex">
-                <div class="head_left flex">
+                   <div class="head_left flex">
                         <!-- <div class="buttonScreen">
                             <div class="sun"><i class="fa-solid fa-sun"></i></div>
                             <div class="btn"></div>
@@ -380,29 +380,29 @@
                         </div> -->
                         <div></div>
                         <ul class="flex">
-                            <li><img src="./img/flag_vn.png" alt="icon" width="50px"></li>
+                            <li><img src="./img/headerandfooter/flag_vn.png" alt="icon" width="50px"></li>
                             <li>VI</li>
                             <li><i class="fa-solid fa-chevron-down"></i></li> 
                             <li>
                                 <ul class="languages">
                                     <li>
-                                        <img src="./img/flag_vn.png" alt="" width="50px">
+                                        <img src="./img/headerandfooter/flag_vn.png" alt="" width="50px">
                                         <p>VI</p>
                                     </li>
                                     <li>
-                                        <img src="./img/flag_anh.webp" alt="" width="38px">
+                                        <img src="./img/headerandfooter/flag_anh.webp" alt="" width="38px">
                                         <p>EN</p>
                                     </li>
                                 </ul> 
                             </li>  
                         </ul>         
-                </div>
+                   </div>
                 
-                <ul class="head_right flex">
+                   <ul class="head_right flex">
                         <li></li>
                         <li><a href="#">Đăng nhập</a></li>
                         <li><a href="#">Đăng ký</a></li>
-                </ul>
+                   </ul>
                 </div>
 
                 <div class="cancel">
@@ -411,12 +411,12 @@
 
                 <nav>
                     <ul class="menu">
-                        <li><a href="./index.html" id="home"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
+                        <li><a href="./index.html"><i class="fa-solid fa-house"></i>Trang Chủ</a></li>
                         <li><a href="./schedule.html">Lịch Trình</a></li>
-                        <li><a href="./checkTicket.html" id="checkTicket">Dịch vụ vé</a></li>
-                        <li><a href="./news.html" id="news">Tin tức</a></li>          
-                        <li><a href="./AboutUs.html" id="about_us">Về chúng tôi</a></li>
-                        <li><a href="./contact.html" id="contact">Liên hệ</a></li>
+                        <li><a href="./checkTicket.html"style="color:var(--white-color);">Dịch vụ vé</a></li>
+                        <li><a href="./news.html">Tin tức</a></li>          
+                        <li><a href="./AboutUs.html">Về chúng tôi</a></li>
+                        <li><a href="./contact.html">Liên hệ</a></li>
                         <li><a href="./comboSave.html">Combo tiết kiệm</a></li>
                         <li><a href="./insurance.html">Bảo hiểm du lịch</a></li>          
                     </ul>
