--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                 <div class="contact__navmenu-form"> 
                     <div class="title">
                         <div class="image">
-                            <img src="./img/contact/mail_send.svg">
+                            <img src="./img/news/mail_send.svg">
                         </div>                
                         <p>
                             Gửi thông tin liên hệ đến chúng tôi
