--- a/index.html
+++ b/index.html
@@ -1183,11 +1183,11 @@
                     <div class="title">Tải app</div>
                     <div class="app_list">
                         <div class="Ch-play flex">
-                            <p><a href = ""><img src="./img/headerandfooter/ch_play.webp" alt="" width="30px"></a></p>
-                            <p><a href = "">CH Play</a></p>
+                            <p><a href = "#"><img src="./img/headerandfooter/ch_play.webp" alt="" width="30px"></a></p>
+                            <p><a href = "#">CH Play</a></p>
                         </div>
                         <div class="app-store">
-                           <p> <a href = ""><i class="fa-brands fa-apple"></i></a></p>
+                           <p> <a href = "#"><i class="fa-brands fa-apple"></i></a></p>
                            <p><a href="">App Store</a></p>
                         </div>
                     </div>                   
